refactor: resolve maintainability code smells in reports and drops modules